WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
187743
REGRESSION (iOS 12): Can't scroll to the bottom of the page in WKWebView while keyboard is up on pages with viewport-fit=cover
https://bugs.webkit.org/show_bug.cgi?id=187743
Summary
REGRESSION (iOS 12): Can't scroll to the bottom of the page in WKWebView whil...
Tim Horton
Reported
2018-07-17 17:12:21 PDT
REGRESSION (iOS 12): Can't scroll to the bottom of the page in WKWebView while keyboard is up on pages with viewport-fit=cover
Attachments
Patch
(9.54 KB, patch)
2018-07-17 17:13 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Patch
(10.65 KB, patch)
2018-07-17 19:45 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2018-07-17 17:13:01 PDT
Created
attachment 345209
[details]
Patch
Tim Horton
Comment 2
2018-07-17 19:45:02 PDT
Created
attachment 345221
[details]
Patch
Tim Horton
Comment 3
2018-07-17 20:24:03 PDT
<
rdar://problem/41651546
>
WebKit Commit Bot
Comment 4
2018-07-17 20:50:19 PDT
Comment on
attachment 345221
[details]
Patch Clearing flags on attachment: 345221 Committed
r233905
: <
https://trac.webkit.org/changeset/233905
>
WebKit Commit Bot
Comment 5
2018-07-17 20:50:20 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug